Ratio displayed with a % sign in the Decimate Keyframes Adjust Last Operation panel. #82070

Closed
opened 2020-10-25 19:12:20 +01:00 by RealName · 14 comments

Blender Version
Broken: Since it's introduction in 2.82 to current master.
The issue even appears in the release notes demo video.
Decimate_Fcurve_Demo.jpg
Short description of error
Small bug, more of an inconsistency. The percentage goes from 0 to 1, which is decimal and not percentage, yet shows a % symbol.

image.png

This isn't how percentages work. Half way should be 50%, not 0.500%; 100%, not 1.000%. Of course the percentage symbol could just be removed and it'd be correct to have 0.5 and 1 as half and full.

image.png

This specific case is in decimating keyframes 'Remove' slider in the f-curve modifier, though maybe it happens everywhere else and I only just noticed.

Exact steps for others to reproduce the error
Open the following file:
#82070 Ratio has percent sign.blend
In the graph editor, open the menu Key->Decimate (Ratio)
Confirm the operation with left mouse click.
Look at the Adjust Last Operation Panel.

**Blender Version** Broken: Since it's introduction in 2.82 to current master. The issue even appears in the release notes demo video. ![Decimate_Fcurve_Demo.jpg](https://archive.blender.org/developer/F9091320/Decimate_Fcurve_Demo.jpg) **Short description of error** Small bug, more of an inconsistency. The percentage goes from 0 to 1, which is decimal and not percentage, yet shows a % symbol. ![image.png](https://archive.blender.org/developer/F9089927/image.png) This isn't how percentages work. Half way should be 50%, not 0.500%; 100%, not 1.000%. Of course the percentage symbol could just be removed and it'd be correct to have 0.5 and 1 as half and full. ![image.png](https://archive.blender.org/developer/F9090043/image.png) This specific case is in decimating keyframes 'Remove' slider in the f-curve modifier, though maybe it happens everywhere else and I only just noticed. **Exact steps for others to reproduce the error** Open the following file: [#82070 Ratio has percent sign.blend](https://archive.blender.org/developer/F9091346/T82070_Ratio_has_percent_sign.blend) In the graph editor, open the menu `Key->Decimate (Ratio)` Confirm the operation with left mouse click. Look at the Adjust Last Operation Panel.
Author

Added subscriber: @Nickname6498156

Added subscriber: @Nickname6498156

Added subscriber: @Beryesa

Added subscriber: @Beryesa
Member

Added subscriber: @EAW

Added subscriber: @EAW
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Confirmed in 2.82a, 2.83, current master & 2.90
#82070.png

It is correctly displayed in the header.
decimate_draw_status_header

T82070_Header_correct.png

Confirmed in 2.82a, 2.83, current master & 2.90 ![#82070.png](https://archive.blender.org/developer/F9090870/T82070.png) It is correctly displayed in the header. [decimate_draw_status_header](https://developer.blender.org/diffusion/B/browse/master/source/blender/editors/space_graph/graph_edit.c$1437) ![T82070_Header_correct.png](https://archive.blender.org/developer/F9090873/T82070_Header_correct.png)
Evan Wilson changed title from 0.5% is not half, should be 50% to Ratio displayed with a % sign in the Decimate Keyframes Adjust Last Operation panel. 2020-10-25 21:01:32 +01:00
Member

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Member

@ZedDB Tagging you here since you implemented this feature.

@ZedDB Tagging you here since you implemented this feature.

Added subscriber: @erik85

Added subscriber: @erik85

"remove_ratio" should be a RNA_def_float to remove the % sign, or keep it as a RNA_def_float_percentage and change the max value to 100 and change the execution code I guess.

RNA_def_float_percentage is used wrongly in two other places in the code: pose slide and gpencil interpolate.

"remove_ratio" should be a **RNA_def_float** to remove the % sign, or keep it as a **RNA_def_float_percentage** and change the max value to 100 and change the execution code I guess. **RNA_def_float_percentage** is used wrongly in two other places in the code: pose slide and gpencil interpolate.
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Thanks for pointing that out @erik85. I made a patch to improve the situation: D9344

Thanks for pointing that out @erik85. I made a patch to improve the situation: [D9344](https://archive.blender.org/developer/D9344)

@HooglyBoogly thanks for fixing this!

@HooglyBoogly thanks for fixing this!

This issue was referenced by c71a8e8376

This issue was referenced by c71a8e837616159735a925bbb82c868646e7d3a1
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Hans Goudey self-assigned this 2021-01-27 18:20:20 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#82070
No description provided.